Products module added

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,9 +1,1 @@
-<app-navbar></app-navbar>
-
-<p>layout works!</p>
-
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
-
-<p>layout works!</p>
+<app-side-nav></app-side-nav>
