--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,53 @@
-<p>navbar works!</p>
+<nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
+  <!-- navbar components -->
+  <div class="container-fluid py-0 mx-0">
+    <!-- Sidebar togler -->
+    <button
+      #showSideBarButton
+      id="showSideBarButton"
+      type="button"
+      class="navbar-toggler sideBar-toggler"
+      (click)="showSideBar(showSideBarButton)"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a class="navbar-brand py-0" href="#">
+      <img
+        class="logo"
+        src="../../../../assets/Elysian-isotipo.svg"
+        alt=""
+        width="30"
+        height="24"
+      />
+    </a>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"
+            >Disabled</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
