product creation component added

--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -32,7 +32,7 @@
         </li>
       </ul>
     </div>
-    <button (click)="goToProductsTable()" class="btn btn-primary">
+    <button (click)="goToProductsTable()" type="button">
       Back
     </button>
   </div>
