--- a/src/app/products/components/products/products.component.html
+++ b/src/app/products/components/products/products.component.html
@@ -1,26 +1,35 @@
 <div class="container pt-4">
-    <table class="table table-dark table-striped">
-        <thead>
-            <tr>
-                <th>Sku</th>
-                <th>Product</th>
-                <th>Brand</th>
-                <th>Price</th>
-                <th>Stock</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let product of products">
-                <td>  
-                    <a [routerLink]="['./', product._id]" class="btn btn-outline-light">
-                        {{product.sku}}
-                    </a>
-                </td>
-                <td>{{product.name}}</td>
-                <td>{{product.brand}}</td>
-                <td>{{product.sale_price | currency}}</td>
-                <td>{{product.stock}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="position-relative py-3">
+        <button routerLink="createProduct" class="btn btn-light position-absolute top-50 start-50 translate-middle">
+          <fa-icon [icon]="faPlus"></fa-icon>
+          Add
+        </button>
+    </div>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Sku</th>
+        <th>Product</th>
+        <th>Brand</th>
+        <th>Price</th>
+        <th>Stock</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let product of products">
+        <td class="list-group">
+          <a
+            class="list-group-item list-group-item-action"
+            [routerLink]="['./', product._id]"
+          >
+            {{ product.sku }}
+          </a>
+        </td>
+        <td>{{ product.name }}</td>
+        <td>{{ product.brand }}</td>
+        <td>{{ product.sale_price | currency }}</td>
+        <td>{{ product.stock }}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
