--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -1,38 +1,182 @@
-<div class="card mb-3 mt-4 mx-auto w-sm-100 w-75">
+<div class="card mb-3 mt-4 mx-auto w-sm-100 w-75" *ngIf="product">
     <!-- <img src="..." class="card-img-top" alt="..."> -->
-    <div class="card-body">
-      <ul class="list-group">
-        <!-- ID -->
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">ID:</div>
+
+    <!-- Edit form -->
+          <div class="card-reader mx-auto mt-3">
+            <h4>{{product.name}}t</h4>
+            <h6 class="text-center">{{product.sku}}</h6>
           </div>
-          <span class="badge bg-primary rounded-pill">{{ product._id }}</span>
-        </li>
-        <!-- Name -->
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">Name:</div>
+          <div class="card-body">
+            <!-- Form -->
+            <form [formGroup]="form" (ngSubmit)="formAction($event)">
+              <!-- name -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Name</span>
+                <input
+                  formControlName="name"
+                  type="text"
+                  name="name"
+                  class="form-control"
+                  [placeholder] = "product.name"
+                  autofocus
+                  required
+                />
+              </div>
+              <!-- Brand -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Brand</span>
+                <input
+                  formControlName="brand"
+                  type="text"
+                  name="brand"
+                  class="form-control"
+                  [placeholder]="product.brand"
+                  required
+                />
+              </div>
+              <!-- Class -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Class</span>
+                <input
+                  formControlName="class"
+                  type="text"
+                  name="class"
+                  class="form-control"
+                  [placeholder]="product.class"
+                  required
+                />
+              </div>
+              <!-- distributor -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Distributor</span>
+                <input
+                  formControlName="distributor"
+                  type="text"
+                  name="distributor"
+                  class="form-control"
+                  [placeholder]="product.distributor"
+                  required
+                />
+              </div>
+              <!-- Stock -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Stock</span>
+                <input
+                  formControlName="stock"
+                  type="number"
+                  name="stock"
+                  class="form-control"
+                  [placeholder]="product.stock"
+                  required
+                />
+              </div>
+              <!-- Position -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Position</span>
+                <input
+                  formControlName="position"
+                  type="text"
+                  name="position"
+                  class="form-control"
+                  [placeholder]="product.position"
+                  [value]="product.position"
+                  required
+                />
+              </div>
+              <!-- Sale Price -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Sale Price</span>
+                <span class="input-group-text">$</span>
+                <input
+                  formControlName="sale_price"
+                  type="number"
+                  name="sale_price"
+                  class="form-control"
+                  [placeholder]="product.sale_price"
+                  required
+                />
+              </div>
+              <!-- Cost Price -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">CostPrice</span>
+                <span class="input-group-text">$</span>
+                <input
+                  formControlName="cost_price"
+                  type="number"
+                  name="cost_price"
+                  class="form-control"
+                  [placeholder]="product.cost_price"
+                  required
+                />
+              </div>
+              <!-- Tags -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">Tags</span>
+                <input
+                  formControlName="tags"
+                  type="text"
+                  name="tags"
+                  class="form-control"
+                  [placeholder]="product.tags"
+                />
+              </div>
+  
+              <div class="text-center">
+                <button
+                  [disabled]="form.invalid"
+                  (click)="initModal(confirmationModal)"
+                  type="submit"
+                  class="btn btn-primary w-50 m-2"
+                  name="submitButton"
+                  >
+                  Save
+                  <fa-icon [icon]="faSave"></fa-icon>
+                </button>
+                <button (click)="deleteProduct(product._id)" class="btn btn-danger w-50 m-2">
+                  Delete this product 
+                  <fa-icon [icon]="faTrashAlt"></fa-icon>
+                </button>
+              </div>
+            </form>
+            <hr class="w-50 mx-auto">
+            <div class="text-center">
+              <button
+                (click)="goToProductsTable()"
+                type="button"
+                class="btn btn-secondary w-50"
+                name="signUpButton"
+              >
+                Back
+              </button>
+            </div>
           </div>
-          <span class="badge bg-primary rounded-pill">{{ product.name }}</span>
-        </li>
-        <!-- Sale Price -->
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">Sale Price:</div>
-          </div>
-          <span class="badge bg-primary rounded-pill">{{ product.sale_price | currency }}</span>
-        </li>
-        <!-- SKU -->
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">SKU:</div>
-          </div>
-          <span class="badge bg-primary rounded-pill">{{ product.sku }}</span>
-        </li>
-      </ul>
-    </div>
-    <button (click)="goToProductsTable()" type="button">
-      Back
-    </button>
   </div>
+
+
+  <!-- Modal -->
+  <div
+    #confirmationModal
+    class="modal fade"
+    id="confirmationModal"
+    tabindex="-1"
+    aria-labelledby="confirmationModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div id="modal-body" class="modal-body fs-3">
+          <div class="d-flex justify-content-center mt-4">
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+            Continue
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
