--- a/src/app/products/components/products/products.component.html
+++ b/src/app/products/components/products/products.component.html
@@ -1,10 +1,24 @@
 <div class="container pt-4">
-    <div class="position-relative py-3">
-        <button routerLink="createProduct" class="btn btn-light position-absolute top-50 start-50 translate-middle">
-          <fa-icon [icon]="faPlus"></fa-icon>
-          Add
-        </button>
-    </div>
+  <div class="position-relative py-3">
+    <button
+      routerLink="createProduct"
+      class="btn btn-light position-absolute top-50 start-50 translate-middle"
+    >
+      <fa-icon [icon]="faPlus"></fa-icon>
+      Add
+    </button>
+  </div>
+  <!-- Search bar -->
+  <div class="d-flex my-4">
+    <input
+      class="form-control me-2"
+      type="search"
+      placeholder="Search Product"
+      aria-label="Search"
+      (keyup)="loadProducts()"
+      [(ngModel)]="search"
+    />
+  </div>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -33,7 +47,6 @@
     </tbody>
   </table>
 </div>
-
 <!-- Modal -->
 <div
   #confirmationModal
