"product tags edditing and saving adjusted"

--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -8,7 +8,7 @@
           </div>
           <div class="card-body">
             <!-- Form -->
-            <form [formGroup]="form" (ngSubmit)="formAction($event)">
+            <form [formGroup]="form" (ngSubmit)="saveProduct($event)">
               <!-- name -->
               <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon3">Name</span>
