Users module added

--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -3,7 +3,7 @@
 
     <!-- Edit form -->
           <div class="card-reader mx-auto mt-3">
-            <h4>{{product.name}}t</h4>
+            <h4>{{product.name}}</h4>
             <h6 class="text-center">{{product.sku}}</h6>
           </div>
           <div class="card-body">
