--- a/src/app/products/components/products/products.component.html
+++ b/src/app/products/components/products/products.component.html
@@ -1,4 +1,5 @@
 <div class="container pt-4">
+  <!-- Add product buttom -->
   <div class="position-relative py-3">
     <button
       routerLink="createProduct"
@@ -19,6 +20,7 @@
       [(ngModel)]="search"
     />
   </div>
+  <!-- Table products -->
   <table class="table table-striped">
     <thead>
       <tr>
