--- a/src/app/shared/components/side-nav/side-nav.component.html
+++ b/src/app/shared/components/side-nav/side-nav.component.html
@@ -15,6 +15,7 @@
     <a class="w-75 p-3" routerLink="/admin/home" routerLinkActive="active">Home</a>
     <a class="w-75 p-3" routerLink="/admin/products" routerLinkActive="active" >Products</a> 
     <a class="w-75 p-3" routerLink="/admin/users" routerLinkActive="active">Users</a>
+    <a class="w-75 p-3" routerLink="/admin/orders/orders-table" routerLinkActive="active">Orders</a>
     <a class="w-75 p-3" href="#">Contact</a>
   </div>
   <div class="container">
