--- a/src/app/orders/components/client-selection/client-selection.component.html
+++ b/src/app/orders/components/client-selection/client-selection.component.html
@@ -6,8 +6,9 @@
       <h2 class="text-center">
         Select the client
       </h2>
-      <div class="container">
+      <div class="container text-center">
         <button class="btn btn-primary" (click)="gotToProductSelection()">
+          <fa-icon [icon]="faArrowLeft"></fa-icon>
           back
         </button>
       </div>
@@ -24,40 +25,43 @@
       />
     </div>
     <!-- Table products -->
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>User Selected</th>
-          <th>name</th>
-          <th>Email</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of users">
-          <td>
-              <button 
-                (click)="selectClient(user)" class="btn btn-success"
-                [routerLink]="['/admin/orders', undefined]" 
-                >
-                Select
-              </button>
-          </td>
-          <td class="list-group">
-            <a
-              class="list-group-item list-group-item-action"
-              [routerLink]="['/admin/users/', user._id]"
-            >
-              {{ user.name }}
-            </a>
-          </td>
-          <td>{{ user.email }}</td>
-          <td *ngIf="user.isAdmin; else isClient">Admin</td>
-          <ng-template #isClient>
-            <td>Client</td>
-          </ng-template>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>User Selected</th>
+            <th>name</th>
+            <th>Email</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let user of users">
+            <td>
+                <button 
+                  (click)="selectClient(user)" class="btn btn-success"
+                  [routerLink]="['/admin/orders', undefined]" 
+                  >
+                  Select
+                  <fa-icon [icon]="faArrowRight"></fa-icon>
+                </button>
+            </td>
+            <td class="list-group">
+              <a
+                class="list-group-item list-group-item-action"
+                [routerLink]="['/admin/users/', user._id]"
+              >
+                {{ user.name }}
+              </a>
+            </td>
+            <td>{{ user.email }}</td>
+            <td *ngIf="user.isAdmin; else isClient">Admin</td>
+            <ng-template #isClient>
+              <td>Client</td>
+            </ng-template>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
