--- a/src/app/users/components/users/users.component.html
+++ b/src/app/users/components/users/users.component.html
@@ -21,32 +21,34 @@
             />
     </div>
     <!-- Table products -->
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>name</th>
-                <th>Email</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of users">
-                  <td class="list-group">
-                    <a class="list-group-item list-group-item-action"
-                    [routerLink]="['./', user._id]" >
-                        {{ user.name }}
-                    </a>  
-                  </td>
-                  <td>{{ user.email }}</td>
-                  <td *ngIf="user.isAdmin; else isClient">
-                    Admin
-                  </td>
-                  <ng-template #isClient>
-                      <td>
-                        Client
-                      </td>
-                  </ng-template>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table table-striped">
+          <thead>
+              <tr>
+                  <th>name</th>
+                  <th>Email</th>
+                  <th>Status</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let user of users">
+                    <td class="list-group">
+                      <a class="list-group-item list-group-item-action"
+                      [routerLink]="['./', user._id]" >
+                          {{ user.name }}
+                      </a>  
+                    </td>
+                    <td>{{ user.email }}</td>
+                    <td *ngIf="user.isAdmin; else isClient">
+                      Admin
+                    </td>
+                    <ng-template #isClient>
+                        <td>
+                          Client
+                        </td>
+                    </ng-template>
+              </tr>
+          </tbody>
+      </table>
+    </div>
 </div>
