Delete product actions fixed

--- a/src/app/users/components/user-detail/user-detail.component.html
+++ b/src/app/users/components/user-detail/user-detail.component.html
@@ -18,6 +18,7 @@
           name="name"
           class="form-control"
           [placeholder]="user.name"
+          [(ngModel)]="user.name"
           autofocus
           required
         />
@@ -31,6 +32,7 @@
           name="email"
           class="form-control"
           [placeholder]="user.email"
+          [(ngModel)]="user.email"
           required
         />
       </div>
@@ -43,6 +45,7 @@
           name="phone"
           class="form-control"
           [placeholder]="user.phone"
+          [(ngModel)]="user.phone"
           required
         />
       </div>
@@ -55,6 +58,7 @@
           name="deliveryAddress"
           class="form-control"
           [placeholder]="user.deliveryAddress"
+          [(ngModel)]="user.deliveryAddress"
           required
         />
       </div>
@@ -67,6 +71,7 @@
           name="documentNumber"
           class="form-control"
           [placeholder]="user.documentNumber"
+          [(ngModel)]="user.documentNumber"
           required
         />
       </div>
