--- a/src/app/products/components/create-product/create-product.component.html
+++ b/src/app/products/components/create-product/create-product.component.html
@@ -19,6 +19,17 @@
                 required
               />
             </div>
+            <!-- sku -->
+            <div class="form-group my-2">
+              <input
+                formControlName="sku"
+                type="text"
+                name="sku"
+                class="form-control"
+                placeholder="sku"
+                autofocus
+              />
+            </div>
             <!-- Brand -->
             <div class="form-group my-2">
               <input
