--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -22,6 +22,19 @@
                   required
                 />
               </div>
+              <!-- SKU -->
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">SKU</span>
+                <input
+                  formControlName="sku"
+                  type="text"
+                  name="sku"
+                  class="form-control"
+                  [placeholder] = "product.sku"
+                  autofocus
+                  required
+                />
+              </div>
               <!-- Brand -->
               <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon3">Brand</span>
