--- a/src/app/orders/components/orders/orders.component.html
+++ b/src/app/orders/components/orders/orders.component.html
@@ -24,10 +24,10 @@
     </div>
     <!-- Table products -->
     <div class="table-responsive">
-      <table class="table table-striped">
+      <table *ngIf="orders" class="table table-striped">
           <thead>
               <tr>
-                  <th>_id</th>
+                  <th id="_id">_id</th>
                   <th>client</th>
                   <th>Status</th>
                   <th>Paid Out</th>
@@ -35,7 +35,7 @@
               </tr>
           </thead> 
           <tbody >
-              <tr *ngFor="let order of orders" ngForOf="">
+              <tr [(ngModel)]="orders" ngDefaultControl *ngFor="let order of orders">
                     <td class="list-group">
                       <a class="list-group-item list-group-item-action"
                       [routerLink]="['/admin/orders', order._id]" 
@@ -43,7 +43,7 @@
                           {{ order._id }}
                       </a>  
                     </td>
-                    <td>{{ order.clientId }}</td>
+                    <td>{{ order.clientName }}</td>
                     <td>{{ order.status }}</td>
                     <td>{{ order.paid_out }}</td>
                     <td>{{ order.creation_date | date }}</td>
