Pagination actions added to products table

--- a/src/app/orders/components/orders/orders.component.html
+++ b/src/app/orders/components/orders/orders.component.html
@@ -16,7 +16,7 @@
         <input 
             class="form-control me-2"
             type="search"
-            placeholder="Search User"
+            placeholder="Search User, Status, paid_out"
             aria-label="Search"
             (keyup)="loadOrders()"
             [(ngModel)]="search"
