--- a/src/app/auth/components/sing-in/sing-in.component.html
+++ b/src/app/auth/components/sing-in/sing-in.component.html
@@ -17,8 +17,10 @@
               required
             />
           </div>
+          <!-- Password input -->
           <div class="form-group my-2">
             <input
+              #passwordInput 
               formControlName="password"
               type="password"
               name="password"
@@ -26,6 +28,13 @@
               placeholder="Password"
               required
             />
+          </div>
+          <!-- Show Password check -->
+          <div class="form-group form-check form-switch my-2" (click)="showPassword()">
+            <input #showPasswordCheck class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+            <label class="form-check-label" for="flexCheckChecked">
+              Show password
+            </label>
           </div>
           <div class="form-group form-check form-switch my-2">
             <input
