--- a/src/app/users/components/create-user/create-user.component.html
+++ b/src/app/users/components/create-user/create-user.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-8 mx-auto">
       <div class="card">
         <div class="card-reader mx-auto mt-3">
-          <h4>Create Product</h4>
+          <h4>Create User</h4>
         </div>
         <div class="card-body">
           <!-- Form -->
@@ -77,6 +77,7 @@
             <!-- password -->
             <div class="form-group my-2 input-group mb-3">
               <input
+                #passwordInput
                 formControlName="password"
                 type="password"
                 name="password"
@@ -84,6 +85,13 @@
                 placeholder="Password"
                 required
               />
+            </div>
+            <!-- Show Password check -->
+            <div class="form-group form-check form-switch my-2" (click)="showPassword()">
+              <input #showPasswordCheck class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+              <label class="form-check-label" for="flexCheckChecked">
+                Show password
+              </label>
             </div>
             <!-- Rememberme-->
             <div class="form-group form-check form-switch my-2">
