GoBAck redirection on order detail adjusted

--- a/src/app/orders/components/order-detail/order-detail.component.html
+++ b/src/app/orders/components/order-detail/order-detail.component.html
@@ -147,7 +147,7 @@
       <hr class="w-50 mx-auto" />
       <div class="text-center">
         <button
-          (click)="goToClientSelection()"
+          (click)="goBack()"
           type="button"
           class="btn btn-secondary w-50"
           name="signUpButton"
