--- a/src/app/products/components/create-product/create-product.component.html
+++ b/src/app/products/components/create-product/create-product.component.html
@@ -1,175 +1,197 @@
 <div class="row mx-auto my-3">
-    <div class="col-md-8 mx-auto">
-      <div class="card">
-        <div class="card-reader mx-auto mt-3">
-          <h4>Create Product</h4>
-        </div>
-        <div class="card-body">
-          <!-- Form -->
-          <form [formGroup]="form" (ngSubmit)="formAction($event)">
-            <!-- name -->
-            <div class="form-group my-2">
-              <input
-                formControlName="name"
-                type="text"
-                name="name"
-                class="form-control"
-                placeholder="Name"
-                autofocus
-                required
-              />
-            </div>
-            <!-- sku -->
-            <div class="form-group my-2">
-              <input
-                formControlName="sku"
-                type="text"
-                name="sku"
-                class="form-control"
-                placeholder="sku"
-                autofocus
-              />
-            </div>
-            <!-- Brand -->
-            <div class="form-group my-2">
-              <input
-                formControlName="brand"
-                type="text"
-                name="brand"
-                class="form-control"
-                placeholder="Brand"
-                required
-              />
-            </div>
-            <!-- Class -->
-            <div class="form-group my-2">
-              <input
-                formControlName="class"
-                type="text"
-                name="class"
-                class="form-control"
-                placeholder="Class"
-                required
-              />
-            </div>
-            <!-- distributor -->
-            <div class="form-group my-2">
-              <input
-                formControlName="distributor"
-                type="text"
-                name="distributor"
-                class="form-control"
-                placeholder="Distributor"
-                required
-              />
-            </div>
-            <!-- Stock -->
-            <div class="form-group my-2">
-              <input
-                formControlName="stock"
-                type="number"
-                name="stock"
-                class="form-control"
-                placeholder="Stock"
-                required
-              />
-            </div>
-            <!-- Position -->
-            <div class="form-group my-2">
-              <input
-                formControlName="position"
-                type="text"
-                name="position"
-                class="form-control"
-                placeholder="Position"
-                required
-              />
-            </div>
-            <!-- Sale Price -->
-            <div class="form-group my-2 input-group mb-3">
-              <span class="input-group-text">$</span>
-              <input
-                formControlName="sale_price"
-                type="number"
-                name="sale_price"
-                class="form-control"
-                placeholder="Sale Price"
-                required
-              />
-            </div>
-            <!-- Cost Price -->
-            <div class="form-group my-2 input-group mb-3">
-              <span class="input-group-text">$</span>
-              <input
-                formControlName="cost_price"
-                type="number"
-                name="cost_price"
-                class="form-control"
-                placeholder="Cost Price"
-                required
-              />
-            </div>
-            <!-- Tags -->
-            <div class="form-group my-2">
-              <input
-                formControlName="tags"
-                type="text"
-                name="tags"
-                class="form-control"
-                placeholder="Tags"
-              />
-            </div>
-
-            <button
-              [disabled]="form.invalid"
-              (click)="initModal(confirmationModal)"
-              type="submit"
-              class="btn btn-primary w-100"
-              name="submitButton"
-            >
-              Save
-            </button>
-          </form>
-          <hr />
-          <div>
-            <button
-              (click)="redirectToProductTable()"
-              type="button"
-              class="btn btn-secondary w-100"
-              name="signUpButton"
-            >
-              Back
-            </button>
-          </div>
-        </div>
+  <div class="col-md-8 mx-auto">
+    <div class="card">
+      <div class="card-reader mx-auto mt-3">
+        <h4>Create Product</h4>
       </div>
-    </div>
-  </div>
-
-  <!-- Modal -->
-  <div
-    #confirmationModal
-    class="modal fade"
-    id="confirmationModal"
-    tabindex="-1"
-    aria-labelledby="confirmationModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div id="modal-body" class="modal-body fs-3">
-          <div class="d-flex justify-content-center mt-4">
-            <div class="spinner-border" role="status">
-              <span class="visually-hidden">Loading...</span>
-            </div>
+      <div class="card-body">
+        <!-- Form -->
+        <form [formGroup]="form" (ngSubmit)="formAction($event)">
+          <!-- name -->
+          <div class="form-group my-2">
+            <input
+              formControlName="name"
+              type="text"
+              name="name"
+              class="form-control"
+              placeholder="Name"
+              autofocus
+              required
+            />
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-            Continue
+          <!-- sku -->
+          <div class="form-group my-2">
+            <input
+              formControlName="sku"
+              type="text"
+              name="sku"
+              class="form-control"
+              placeholder="sku"
+              autofocus
+            />
+          </div>
+          <!-- Brand -->
+          <div class="form-group my-2">
+            <input
+              formControlName="brand"
+              type="text"
+              name="brand"
+              class="form-control"
+              placeholder="Brand"
+              required
+            />
+          </div>
+          <!-- Class -->
+          <div class="form-group my-2">
+            <input
+              formControlName="class"
+              type="text"
+              name="class"
+              class="form-control"
+              placeholder="Class"
+              required
+            />
+          </div>
+          <!-- distributor -->
+          <div class="form-group my-2">
+            <input
+              formControlName="distributor"
+              type="text"
+              name="distributor"
+              class="form-control"
+              placeholder="Distributor"
+              required
+            />
+          </div>
+          <!-- Stock -->
+          <div class="form-group my-2">
+            <input
+              formControlName="stock"
+              type="number"
+              name="stock"
+              class="form-control"
+              placeholder="Stock"
+              required
+            />
+          </div>
+          <!-- Position -->
+          <div class="form-group my-2">
+            <input
+              formControlName="position"
+              type="text"
+              name="position"
+              class="form-control"
+              placeholder="Position"
+              required
+            />
+          </div>
+          <!-- Sale Price -->
+          <div class="form-group my-2 input-group mb-3">
+            <span class="input-group-text">$</span>
+            <input
+              formControlName="sale_price"
+              type="number"
+              name="sale_price"
+              class="form-control"
+              placeholder="Sale Price"
+              required
+            />
+          </div>
+          <!-- Cost Price -->
+          <div class="form-group my-2 input-group mb-3">
+            <span class="input-group-text">$</span>
+            <input
+              formControlName="cost_price"
+              type="number"
+              name="cost_price"
+              class="form-control"
+              placeholder="Cost Price"
+              required
+            />
+          </div>
+          <!-- Tags -->
+          <div class="form-group my-2">
+            <input
+              formControlName="tags"
+              type="text"
+              name="tags"
+              class="form-control"
+              placeholder="Tags"
+            />
+          </div>
+          <!-- Upload product photos -->
+          <div class="upLoadProductImageDiv form-group m-2 mb-3 text-center">
+            <ngx-dropzone (change)="onSelect($event)">
+              <ngx-dropzone-label>
+                <fa-icon class="fa-2x" [icon]="faCloudUploadAlt"></fa-icon>
+                <div>
+                  Drop pictures !
+                </div>
+              </ngx-dropzone-label>
+              <ngx-dropzone-image-preview
+                ngProjectAs="ngx-dropzone-preview"
+                *ngFor="let f of files"
+                [file]="f"
+                [removable]="true" 
+                (removed)="onRemove(f)"
+              >
+                <ngx-dropzone-label
+                  >{{ f.name }} ({{ f.type }})</ngx-dropzone-label
+                >
+              </ngx-dropzone-image-preview>
+            </ngx-dropzone>
+          </div>
+
+          <!-- Actions -->
+          <button
+            [disabled]="form.invalid"
+            (click)="initModal(confirmationModal)"
+            type="submit"
+            class="btn btn-primary w-100"
+            name="submitButton"
+          >
+            Save
+          </button>
+        </form>
+        <hr />
+        <div>
+          <button
+            (click)="redirectToProductTable()"
+            type="button"
+            class="btn btn-secondary w-100"
+            name="signUpButton"
+          >
+            Back
           </button>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
+
+<!-- Modal -->
+<div
+  #confirmationModal
+  class="modal fade"
+  id="confirmationModal"
+  tabindex="-1"
+  aria-labelledby="confirmationModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div id="modal-body" class="modal-body fs-3">
+        <div class="d-flex justify-content-center mt-4">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+          Continue
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
